@@ -1446,6 +1446,12 @@
 		4F82A3FE0FCDE53500C477D4 /* GDataEntrySpreadsheetTable.m in Sources */ = {isa = PBXBuildFile; fileRef = 4F82A3FC0FCDE53500C477D4 /* GDataEntrySpreadsheetTable.m */; };
 		4F82A3FF0FCDE53500C477D4 /* GDataEntrySpreadsheetTable.h in Headers */ = {isa = PBXBuildFile; fileRef = 4F82A3FB0FCDE53500C477D4 /* GDataEntrySpreadsheetTable.h */; settings = {ATTRIBUTES = (Public, ); }; };
 		4F82A4000FCDE53500C477D4 /* GDataEntrySpreadsheetTable.m in Sources */ = {isa = PBXBuildFile; fileRef = 4F82A3FC0FCDE53500C477D4 /* GDataEntrySpreadsheetTable.m */; };
+		4F8413B0118B71C90067A34B /* GDataYouTubeRating.h in Headers */ = {isa = PBXBuildFile; fileRef = 4F8413AE118B71C90067A34B /* GDataYouTubeRating.h */; settings = {ATTRIBUTES = (Public, ); }; };
+		4F8413B1118B71C90067A34B /* GDataYouTubeRating.m in Sources */ = {isa = PBXBuildFile; fileRef = 4F8413AF118B71C90067A34B /* GDataYouTubeRating.m */; };
+		4F8413B2118B71C90067A34B /* GDataYouTubeRating.m in Sources */ = {isa = PBXBuildFile; fileRef = 4F8413AF118B71C90067A34B /* GDataYouTubeRating.m */; };
+		4F8413B3118B71C90067A34B /* GDataYouTubeRating.m in Sources */ = {isa = PBXBuildFile; fileRef = 4F8413AF118B71C90067A34B /* GDataYouTubeRating.m */; };
+		4F8413B4118B71C90067A34B /* GDataYouTubeRating.m in Sources */ = {isa = PBXBuildFile; fileRef = 4F8413AF118B71C90067A34B /* GDataYouTubeRating.m */; };
+		4F8413B5118B71C90067A34B /* GDataYouTubeRating.m in Sources */ = {isa = PBXBuildFile; fileRef = 4F8413AF118B71C90067A34B /* GDataYouTubeRating.m */; };
 		4F848C6E0D887A2A007ECFCD /* GDataDefines.h in Headers */ = {isa = PBXBuildFile; fileRef = 4F848C6D0D887A2A007ECFCD /* GDataDefines.h */; settings = {ATTRIBUTES = (Public, ); }; };
 		4F85DEE2103B83B700B4C418 /* FeedGoogleBaseSnippetTest1.xml in Resources */ = {isa = PBXBuildFile; fileRef = 4FD23A400B8FDB2A007C0AD4 /* FeedGoogleBaseSnippetTest1.xml */; };
 		4F85DEE3103B83B700B4C418 /* FeedGoogleBaseItemTypesTest1.xml in Resources */ = {isa = PBXBuildFile; fileRef = 4FD23A410B8FDB2A007C0AD4 /* FeedGoogleBaseItemTypesTest1.xml */; };
@@ -2308,6 +2314,7 @@
 			dstPath = Headers;
 			dstSubfolderSpec = 16;
 			files = (
+				4F1C70E51027B53600B46459 /* GDataEntryYouTubeUpload.h in Copy Static Library Headers */,
 				4FEB9E09116FB2A700F6037F /* GDataACLKeyedRole.h in Copy Static Library Headers */,
 				4FC0CE0B115C36630061CBCA /* GDataBookConstants.h in Copy Static Library Headers */,
 				4FC0CE0C115C36630061CBCA /* GDataFeedCollection.h in Copy Static Library Headers */,
@@ -2459,7 +2466,6 @@
 				4F1C70E21027B53600B46459 /* GDataEntryYouTubePlaylistLink.h in Copy Static Library Headers */,
 				4F1C70E31027B53600B46459 /* GDataEntryYouTubeRating.h in Copy Static Library Headers */,
 				4F1C70E41027B53600B46459 /* GDataEntryYouTubeSubscription.h in Copy Static Library Headers */,
-				4F1C70E51027B53600B46459 /* GDataEntryYouTubeUpload.h in Copy Static Library Headers */,
 				4F1C70E61027B53600B46459 /* GDataEntryYouTubeUserEvent.h in Copy Static Library Headers */,
 				4F1C70E71027B53600B46459 /* GDataEntryYouTubeUserProfile.h in Copy Static Library Headers */,
 				4F1C70E81027B53600B46459 /* GDataEntryYouTubeVideo.h in Copy Static Library Headers */,
@@ -3106,6 +3112,8 @@
 		4F82A3FC0FCDE53500C477D4 /* GDataEntrySpreadsheetTable.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; path = GDataEntrySpreadsheetTable.m; sourceTree = "<group>"; };
 		4F82A8F70FD0868400C477D4 /* FeedSpreadsheetRecordTest1.xml */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.xml; name = FeedSpreadsheetRecordTest1.xml; path = Tests/FeedSpreadsheetRecordTest1.xml; sourceTree = "<group>"; };
 		4F82A8F80FD0869100C477D4 /* FeedSpreadsheetTableTest1.xml */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.xml; name = FeedSpreadsheetTableTest1.xml; path = Tests/FeedSpreadsheetTableTest1.xml; sourceTree = "<group>"; };
+		4F8413AE118B71C90067A34B /* GDataYouTubeRating.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; name = GDataYouTubeRating.h; path = Clients/YouTube/GDataYouTubeRating.h; sourceTree = "<group>"; };
+		4F8413AF118B71C90067A34B /* GDataYouTubeRating.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; name = GDataYouTubeRating.m; path = Clients/YouTube/GDataYouTubeRating.m; sourceTree = "<group>"; };
 		4F848C6D0D887A2A007ECFCD /* GDataDefines.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = GDataDefines.h; sourceTree = "<group>"; };
 		4F85E018103B83B700B4C418 /* GDataIPhoneUnitTests.octest */ = {isa = PBXFileReference; explicitFileType = wrapper.cfbundle; includeInIndex = 0; path = GDataIPhoneUnitTests.octest; sourceTree = BUILT_PRODUCTS_DIR; };
 		4F9044450F2694F7000097B1 /* GDataServiceACL.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; name = GDataServiceACL.h; path = ACL/GDataServiceACL.h; sourceTree = "<group>"; };
@@ -4227,6 +4235,8 @@
 				4F02361F0D5A7F7A00EE6862 /* GDataYouTubePublicationState.m */,
 				4F45B3100D51422400004F37 /* GDataYouTubeMediaElements.h */,
 				4F45B3110D51422400004F37 /* GDataYouTubeMediaElements.m */,
+				4F8413AE118B71C90067A34B /* GDataYouTubeRating.h */,
+				4F8413AF118B71C90067A34B /* GDataYouTubeRating.m */,
 				4F45A8D10D4EAE6300004F37 /* GDataYouTubeStatistics.h */,
 				4F45A8CB0D4EAE5B00004F37 /* GDataYouTubeStatistics.m */,
 				4F69E7440D4AD9B60084991B /* GDataQueryYouTube.h */,
@@ -4889,6 +4899,7 @@
 				4FC0CDFF115C35E60061CBCA /* GDataFeedCollection.h in Headers */,
 				4FC0CE00115C35E60061CBCA /* GDataBookConstants.h in Headers */,
 				4FEB9E05116FB29600F6037F /* GDataACLKeyedRole.h in Headers */,
+				4F8413B0118B71C90067A34B /* GDataYouTubeRating.h in Headers */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -5414,6 +5425,7 @@
 				4FC0CDF9115C35E60061CBCA /* GDataBookConstants.m in Sources */,
 				4FC0CDFA115C35E60061CBCA /* GDataFeedCollection.m in Sources */,
 				4FEB9E03116FB29600F6037F /* GDataACLKeyedRole.m in Sources */,
+				4F8413B3118B71C90067A34B /* GDataYouTubeRating.m in Sources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -5732,6 +5744,7 @@
 				4FC0CE08115C35E60061CBCA /* GDataBookConstants.m in Sources */,
 				4FC0CE09115C35E60061CBCA /* GDataFeedCollection.m in Sources */,
 				4FEB9E08116FB29600F6037F /* GDataACLKeyedRole.m in Sources */,
+				4F8413B5118B71C90067A34B /* GDataYouTubeRating.m in Sources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -6049,6 +6062,7 @@
 				4FC0CE05115C35E60061CBCA /* GDataBookConstants.m in Sources */,
 				4FC0CE06115C35E60061CBCA /* GDataFeedCollection.m in Sources */,
 				4FEB9E07116FB29600F6037F /* GDataACLKeyedRole.m in Sources */,
+				4F8413B2118B71C90067A34B /* GDataYouTubeRating.m in Sources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -6365,6 +6379,7 @@
 				4FC0CE02115C35E60061CBCA /* GDataBookConstants.m in Sources */,
 				4FC0CE03115C35E60061CBCA /* GDataFeedCollection.m in Sources */,
 				4FEB9E06116FB29600F6037F /* GDataACLKeyedRole.m in Sources */,
+				4F8413B1118B71C90067A34B /* GDataYouTubeRating.m in Sources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -6697,6 +6712,7 @@
 				4FC0CDFC115C35E60061CBCA /* GDataBookConstants.m in Sources */,
 				4FC0CDFD115C35E60061CBCA /* GDataFeedCollection.m in Sources */,
 				4FEB9E04116FB29600F6037F /* GDataACLKeyedRole.m in Sources */,
+				4F8413B4118B71C90067A34B /* GDataYouTubeRating.m in Sources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
