@@ -1775,10 +1775,8 @@
     { @"entries.0.comment.feedLink.href", @"http://gdata.youtube.com/feeds/api/videos/Dl643JFJWig/comments" },
     { @"entries.0.links.0.youTubeToken.stringValue", @"ZeeToken" },
     { @"entries.0.isEmbeddable", @"0" },
-    { @"entries.0.rating.average", @"3" },
-    { @"entries.0.rating.min", @"1" },
-    { @"entries.0.rating.max", @"5" },
-    { @"entries.0.rating.numberOfRaters", @"4" },
+    { @"entries.0.rating.numberOfLikes", @"100" },
+    { @"entries.0.rating.numberOfDislikes", @"25" },
     { @"entries.0.mediaGroup.duration", @"3266" },
     { @"entries.0.mediaGroup.isPrivate", @"1" },
     { @"entries.0.mediaGroup.mediaPlayers.0.URLString", @"http://www.youtube.com/watch?v=Dl643JFJWig" },
